WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179564
Compositing layers in UIWebView are often missing content after scrolling
https://bugs.webkit.org/show_bug.cgi?id=179564
Summary
Compositing layers in UIWebView are often missing content after scrolling
Simon Fraser (smfr)
Reported
2017-11-10 16:53:31 PST
Compositing layers in UIWebView are often missing content after scrolling
Attachments
Patch
(2.53 KB, patch)
2017-11-10 16:58 PST
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-11-10 16:58:32 PST
Created
attachment 326663
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-11-10 16:59:20 PST
rdar://problem/33885639
Simon Fraser (smfr)
Comment 3
2017-11-10 17:08:32 PST
https://trac.webkit.org/r224716
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug